# causal-lstm-stock-movement

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  live_prediction.yml
configs/: data.yaml  model.yaml  train.yaml
data/raw/causal/: sample_causal_signals.csv
data/raw/macro/: sample_macro_panel.csv
data/raw/news/: sample_news.csv
data/raw/prices/: sample_prices.csv
data/raw/real/: real_causal.csv  real_macro.csv  real_news.csv  real_prices.csv
data/raw/real_test/: real_prices.csv
docs/: paper_notes.md  pipeline_flow.md
outputs/: ablation_run.json  compare_real.json  compare_synthetic.json  final_paper_run.json  wf_smoke.json
scripts/: build_finbert_features.py  compare_models.py  evaluate_model.py  fetch_real_data.py  live_predict_job.py  plot_paper_figures.py  prepare_data.py  run_inference.py  smoke_test.sh  train_model.py  walk_forward_backtest.py
src/causal_lstm_stock/: config.py  evaluate.py  pipeline.py  train.py
src/causal_lstm_stock/causal/: __init__.py  macro_shock_generator.py
src/causal_lstm_stock/data/: causal_loader.py  dataset_builder.py  external_prices.py  fred_series.py  macro_loader.py  news_loader.py  price_loader.py
src/causal_lstm_stock/evaluate/: __init__.py  classifier_metrics.py  probability_metrics.py  walk_forward.py
src/causal_lstm_stock/features/: causal_features.py  fusion.py  modalities.py  (+2 more)
tests/: test_fred_export_csv.py  test_macro_shock.py  test_modalities.py  test_probability_metrics.py  test_shapes.py  test_walk_forward_compare.py
(+5 files in other folders)
